@@ -1,3 +1,7 @@
+openoffice-base-beta 3.0-ooo300_m4-1
+- use gzip compression for cvs, much faster
+- --disable-reportdesign extion build
+
 openoffice-base-beta 3.0-ooo300_m3-1
 - new snapshot
 - fixed buildfix-gcc43.diff
